# dictTohtml

./: .gitignore  README.md  pyproject.toml
dictToHtml/: __init__.py  core.py
