[tool.poetry]
name = "dicttohtml"
version = "0.1.3"
description = "dictToHtml是一个强大的Python工具，用于将Python字典转换为功能基本的HTML页面。它提供了一种简单直观的方式来通过字典配置生成包含各种UI组件和交互功能的网页"
authors = ["'fkl' <18654198191@163.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/xiwen-haochi/dictTohtml"
repository = "https://github.com/xiwen-haochi/dictTohtml"
keywords = [
    "dict to html",
    "html",
    "dict",
]
packages = [
    { include = "dictToHtml" }
]
include = [
    "dictToHtml", "docs", "docs/*"]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
